--- a/ch3.ipynb
+++ b/ch3.ipynb
@@ -4,6 +4,14 @@
    "cell_type": "markdown",
    "id": "16226a70-690b-4baa-ab9c-f89cd9bfc37f",
    "metadata": {},
+   "source": [
+    "#### Chapter 3 - Linear Regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b63773ab",
+   "metadata": {},
    "source": []
   }
  ],
