--- a/ch2.ipynb
+++ b/ch2.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "f449f6ec",
+   "metadata": {},
+   "source": [
+    "#### Chapter 2 - Statistical Learning"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "f2555559-b8a9-47a4-9018-1560f0861eb0",
